[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/enemySquare.png" type="Texture" id=1]
[ext_resource path="res://assets/heart.png" type="Texture" id=2]
[ext_resource path="res://fonts/Fibberish/Fibberish.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/black.png" type="Texture" id=4]
[ext_resource path="res://Objects/HPButton.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 37.5, 37.5 )

[node name="HPButton" type="Node2D"]
script = ExtResource( 5 )

[node name="Box" type="Node2D" parent="."]

[node name="NinePatchRect" type="NinePatchRect" parent="Box"]
modulate = Color( 0.305882, 0.956863, 0.360784, 1 )
margin_left = -38.0
margin_top = -36.0
margin_right = 37.0
margin_bottom = 39.0
texture = ExtResource( 1 )

[node name="ItemSprite" type="AnimatedSprite" parent="Box"]
position = Vector2( 1, 2 )
rotation = -0.00307262
scale = Vector2( 12.8061, 12.9095 )
frames = SubResource( 1 )
animation = "New Anim"

[node name="ItemLabel" type="RichTextLabel" parent="."]
margin_left = -32.0
margin_top = 44.0
margin_right = 33.0
margin_bottom = 76.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "Heal"
text = "Heal"

[node name="ClickArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
position = Vector2( 0, 2 )
shape = SubResource( 3 )

[node name="HoverBox" type="NinePatchRect" parent="."]
modulate = Color( 1, 1, 1, 0.513726 )
margin_left = -38.0
margin_top = -36.0
margin_right = 38.0
margin_bottom = 39.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="input_event" from="ClickArea" to="." method="_on_ClickArea_input_event"]
[connection signal="mouse_entered" from="ClickArea" to="." method="_on_ClickArea_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_ClickArea_mouse_exited"]
